--- a/Homeworks/Homework2/Homework2.ipynb
+++ b/Homeworks/Homework2/Homework2.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To the Editor,\n",
+      "To help you make an informed decision, I'll use the tools to gather information about the players involved in the trade. Here are the requests I'd like to make:\n",
       "\n",
-      "I am writing to express my concern about the persistent rat problem at Northeastern University's College of Science. The infestation has become a serious issue, and I believe it is largely due to the unsanitary conditions in the math department's facilities. The lack of proper waste management and cleanliness in these areas has created an environment that is conducive to rodent activity. I urge the university to take immediate action to address this issue and ensure a safe and healthy environment for students and faculty.\n",
+      "1. **get_stats** for JK Dobbins, last 8 games, and the following stats: rushing yards, rushing touchdowns, receptions, receiving yards, and receiving touchdowns.\n",
+      "2. **get_stats** for CD Lamb, last 8 games, and the following stats: receptions, receiving yards, and receiving touchdowns.\n",
+      "3. **get_stats** for Lamar Jackson, last 8 games, and the following stats: passing yards, passing touchdowns, rushing yards, and rushing touchdowns.\n",
+      "4. **get_stats** for Tyrone Tracy Jr, last 8 games, and the following stats: receptions, receiving yards, and receiving touchdowns.\n",
+      "5. **get_rank** for JK Dobbins, and the league type is PPR (Points Per Reception).\n",
+      "6. **get_rank** for CD Lamb, and the league type is PPR (Points Per Reception).\n",
+      "7. **get_rank** for Lamar Jackson, and the league type is PPR (Points Per Reception).\n",
+      "8. **get_rank** for Tyrone Tracy Jr, and the league type is PPR (Points Per Reception).\n",
       "\n",
-      "Sincerely, [Your Name]\n"
+      "Please provide the results for these requests, and I'll help you analyze the data to make a decision about the trade.\n"
      ]
     }
    ],
@@ -26,7 +33,7 @@
     "resp = client.chat.completions.create(\n",
     "    messages = [{ \n",
     "        \"role\": \"user\", \n",
-    "        \"content\": \"Write short complaint to The Boston Globe about the rat problem at Northeastern CS. Blame the math department. No more than 4 sentences.\" \n",
+    "        \"content\": \"Should I trade JK Dobbins and CD Lamb for Lamar Jackson and Tyrone Tracy Jr in Fantasy Football? You have access to 2 tools. One is called get_stats and can give you stats for a player, you must specify the name of the player, the last N games you want, and which stats you want. Another tool is called get_rank, and takes in a name and league type and gives you a value amount for that player from 0-100. If you need access to any of those tools, please return the requests in a list with the given parameters and I will respond with the results. I want the most up to date info, which includes games up to November 23 2024.\" \n",
     "    }],\n",
     "    model = \"meta-llama/Meta-Llama-3.1-8B-Instruct\",\n",
     "    temperature=0)\n",
