improved reddit scraper

--- a/Project/scrape_ff_rank.ipynb
+++ b/Project/scrape_ff_rank.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-30T22:35:53.094696Z",
+     "start_time": "2024-11-30T22:35:53.050161Z"
+    }
+   },
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -12,9 +15,11 @@
     "import re\n",
     "from enum import Enum\n",
     "import os\n",
-    "import nfl_data_py as nfl\n",
+    "#import nfl_data_py as nfl\n",
     "import praw"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -205,10 +210,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-30T22:45:25.472001Z",
+     "start_time": "2024-11-30T22:45:25.445338Z"
+    }
+   },
+   "source": "pd.read_parquet('fantasy_football_qa_pairs.parquet')",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                      thread_title  \\\n",
+       "0    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
+       "1    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
+       "2    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
+       "3    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
+       "4    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
+       "..                                             ...   \n",
+       "904   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "905   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "906   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "907   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "908   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "\n",
+       "                                            thread_url  \\\n",
+       "0    https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "1    https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "2    https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "3    https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "4    https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "..                                                 ...   \n",
+       "904  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "905  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "906  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "907  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "908  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "\n",
+       "                                              question       question_author  \\\n",
+       "0    Fully PPR\\n\\nCurrently rostering Dissly and Ki...    Ok_Preparation4430   \n",
+       "1    Fully PPR\\n\\nCurrently rostering Dissly and Ki...    Ok_Preparation4430   \n",
+       "2    Full PPR, should I drop Cade Otton for Taysom ...  Signal_Lengthiness83   \n",
+       "3    Olave available, worth grabbing for any of Ake...       4plates1barbell   \n",
+       "4    With Pacheco coming back off IR, I have to dro...    thehippestmanalive   \n",
+       "..                                                 ...                   ...   \n",
+       "904  Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...   Proxima_Centauri_69   \n",
+       "905        Are you all starting taysom hill this week?    Remarkable_Fun_305   \n",
+       "906        Are you all starting taysom hill this week?    Remarkable_Fun_305   \n",
+       "907                            PPR - Kareem or Waddle?               Jetlius   \n",
+       "908                                 Lions or Texans D?      HauntingWrap3430   \n",
+       "\n",
+       "                                                answer         answer_author  \n",
+       "0    I think Kincaid is ok to drop at this point, h...    Kraken_Paratrooper  \n",
+       "1                                          I’d do that           Exploreshit  \n",
+       "2                                             I’d hold       4plates1barbell  \n",
+       "3    I wouldn’t. No guarantee Olave even plays agai...           Slashzero77  \n",
+       "4                                                otton  Worried_Character_97  \n",
+       "..                                                 ...                   ...  \n",
+       "904                        I would go Kraft, then Rome             Fatnajera  \n",
+       "905  I also have kittle and hill. Debating. Buffalo...         YGuy_The_Jedi  \n",
+       "906                                               Yeah             Fatnajera  \n",
+       "907                                             Waddle            BennyJetss  \n",
+       "908                                             Texans             Fatnajera  \n",
+       "\n",
+       "[909 rows x 6 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>thread_title</th>\n",
+       "      <th>thread_url</th>\n",
+       "      <th>question</th>\n",
+       "      <th>question_author</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>answer_author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Fully PPR\\n\\nCurrently rostering Dissly and Ki...</td>\n",
+       "      <td>Ok_Preparation4430</td>\n",
+       "      <td>I think Kincaid is ok to drop at this point, h...</td>\n",
+       "      <td>Kraken_Paratrooper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Fully PPR\\n\\nCurrently rostering Dissly and Ki...</td>\n",
+       "      <td>Ok_Preparation4430</td>\n",
+       "      <td>I’d do that</td>\n",
+       "      <td>Exploreshit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Full PPR, should I drop Cade Otton for Taysom ...</td>\n",
+       "      <td>Signal_Lengthiness83</td>\n",
+       "      <td>I’d hold</td>\n",
+       "      <td>4plates1barbell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Olave available, worth grabbing for any of Ake...</td>\n",
+       "      <td>4plates1barbell</td>\n",
+       "      <td>I wouldn’t. No guarantee Olave even plays agai...</td>\n",
+       "      <td>Slashzero77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>With Pacheco coming back off IR, I have to dro...</td>\n",
+       "      <td>thehippestmanalive</td>\n",
+       "      <td>otton</td>\n",
+       "      <td>Worried_Character_97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>904</th>\n",
+       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...</td>\n",
+       "      <td>Proxima_Centauri_69</td>\n",
+       "      <td>I would go Kraft, then Rome</td>\n",
+       "      <td>Fatnajera</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>905</th>\n",
+       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Are you all starting taysom hill this week?</td>\n",
+       "      <td>Remarkable_Fun_305</td>\n",
+       "      <td>I also have kittle and hill. Debating. Buffalo...</td>\n",
+       "      <td>YGuy_The_Jedi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>906</th>\n",
+       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Are you all starting taysom hill this week?</td>\n",
+       "      <td>Remarkable_Fun_305</td>\n",
+       "      <td>Yeah</td>\n",
+       "      <td>Fatnajera</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>907</th>\n",
+       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>PPR - Kareem or Waddle?</td>\n",
+       "      <td>Jetlius</td>\n",
+       "      <td>Waddle</td>\n",
+       "      <td>BennyJetss</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>908</th>\n",
+       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
+       "      <td>Lions or Texans D?</td>\n",
+       "      <td>HauntingWrap3430</td>\n",
+       "      <td>Texans</td>\n",
+       "      <td>Fatnajera</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>909 rows × 6 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
