completed reddit scraper

--- a/Project/scrape_ff_rank.ipynb
+++ b/Project/scrape_ff_rank.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-30T22:35:53.094696Z",
-     "start_time": "2024-11-30T22:35:53.050161Z"
+     "end_time": "2024-12-01T02:02:58.906597Z",
+     "start_time": "2024-12-01T02:02:58.391626Z"
     }
    },
    "source": [
@@ -212,27 +212,27 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-30T22:45:25.472001Z",
-     "start_time": "2024-11-30T22:45:25.445338Z"
+     "end_time": "2024-12-01T02:03:03.105040Z",
+     "start_time": "2024-12-01T02:03:03.029405Z"
     }
    },
-   "source": "pd.read_parquet('fantasy_football_qa_pairs.parquet')",
+   "source": "pd.read_parquet('parquet/WDIS_WR_qa_pairs.parquet')",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "                                      thread_title  \\\n",
-       "0    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
-       "1    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
-       "2    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
-       "3    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
-       "4    Official: [Add/Drop] - Thu Morning 11/28/2024   \n",
-       "..                                             ...   \n",
-       "904   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "905   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "906   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "907   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "908   Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "                                       thread_title  \\\n",
+       "0    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
+       "1    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
+       "2    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
+       "3    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
+       "4    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
+       "..                                              ...   \n",
+       "323    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "324    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "325    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "326    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "327    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
        "\n",
        "                                            thread_url  \\\n",
        "0    https://www.reddit.com/r/fantasyfootball/comme...   \n",
@@ -241,39 +241,39 @@
        "3    https://www.reddit.com/r/fantasyfootball/comme...   \n",
        "4    https://www.reddit.com/r/fantasyfootball/comme...   \n",
        "..                                                 ...   \n",
-       "904  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "905  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "906  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "907  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "908  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "323  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "324  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "325  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "326  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "327  https://www.reddit.com/r/fantasyfootball/comme...   \n",
        "\n",
-       "                                              question       question_author  \\\n",
-       "0    Fully PPR\\n\\nCurrently rostering Dissly and Ki...    Ok_Preparation4430   \n",
-       "1    Fully PPR\\n\\nCurrently rostering Dissly and Ki...    Ok_Preparation4430   \n",
-       "2    Full PPR, should I drop Cade Otton for Taysom ...  Signal_Lengthiness83   \n",
-       "3    Olave available, worth grabbing for any of Ake...       4plates1barbell   \n",
-       "4    With Pacheco coming back off IR, I have to dro...    thehippestmanalive   \n",
-       "..                                                 ...                   ...   \n",
-       "904  Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...   Proxima_Centauri_69   \n",
-       "905        Are you all starting taysom hill this week?    Remarkable_Fun_305   \n",
-       "906        Are you all starting taysom hill this week?    Remarkable_Fun_305   \n",
-       "907                            PPR - Kareem or Waddle?               Jetlius   \n",
-       "908                                 Lions or Texans D?      HauntingWrap3430   \n",
+       "                                              question      question_author  \\\n",
+       "0    .5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...      LetTimmySmoke55   \n",
+       "1    .5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...      LetTimmySmoke55   \n",
+       "2    .5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...      LetTimmySmoke55   \n",
+       "3    Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...         Gooner-Squad   \n",
+       "4    Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...         Gooner-Squad   \n",
+       "..                                                 ...                  ...   \n",
+       "323  Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...  Proxima_Centauri_69   \n",
+       "324        Are you all starting taysom hill this week?   Remarkable_Fun_305   \n",
+       "325        Are you all starting taysom hill this week?   Remarkable_Fun_305   \n",
+       "326                            PPR - Kareem or Waddle?              Jetlius   \n",
+       "327                                 Lions or Texans D?     HauntingWrap3430   \n",
        "\n",
-       "                                                answer         answer_author  \n",
-       "0    I think Kincaid is ok to drop at this point, h...    Kraken_Paratrooper  \n",
-       "1                                          I’d do that           Exploreshit  \n",
-       "2                                             I’d hold       4plates1barbell  \n",
-       "3    I wouldn’t. No guarantee Olave even plays agai...           Slashzero77  \n",
-       "4                                                otton  Worried_Character_97  \n",
-       "..                                                 ...                   ...  \n",
-       "904                        I would go Kraft, then Rome             Fatnajera  \n",
-       "905  I also have kittle and hill. Debating. Buffalo...         YGuy_The_Jedi  \n",
-       "906                                               Yeah             Fatnajera  \n",
-       "907                                             Waddle            BennyJetss  \n",
-       "908                                             Texans             Fatnajera  \n",
+       "                                                answer      answer_author  \n",
+       "0    Ridley easily. Washington gives up so many big...      noviceinexcel  \n",
+       "1                                   BTJ if TLaw plays.       Gooner-Squad  \n",
+       "2                               BTJ with Lawrence back  Fancy_Parsley9429  \n",
+       "3                                   Higgins and Sutton          brimmaudo  \n",
+       "4                                      London, Higgins  Fancy_Parsley9429  \n",
+       "..                                                 ...                ...  \n",
+       "323                        I would go Kraft, then Rome          Fatnajera  \n",
+       "324  I also have kittle and hill. Debating. Buffalo...      YGuy_The_Jedi  \n",
+       "325                                               Yeah          Fatnajera  \n",
+       "326                                             Waddle         BennyJetss  \n",
+       "327                                             Texans          Fatnajera  \n",
        "\n",
-       "[909 rows x 6 columns]"
+       "[328 rows x 6 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -305,48 +305,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Fully PPR\\n\\nCurrently rostering Dissly and Ki...</td>\n",
-       "      <td>Ok_Preparation4430</td>\n",
-       "      <td>I think Kincaid is ok to drop at this point, h...</td>\n",
-       "      <td>Kraken_Paratrooper</td>\n",
+       "      <td>.5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...</td>\n",
+       "      <td>LetTimmySmoke55</td>\n",
+       "      <td>Ridley easily. Washington gives up so many big...</td>\n",
+       "      <td>noviceinexcel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Fully PPR\\n\\nCurrently rostering Dissly and Ki...</td>\n",
-       "      <td>Ok_Preparation4430</td>\n",
-       "      <td>I’d do that</td>\n",
-       "      <td>Exploreshit</td>\n",
+       "      <td>.5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...</td>\n",
+       "      <td>LetTimmySmoke55</td>\n",
+       "      <td>BTJ if TLaw plays.</td>\n",
+       "      <td>Gooner-Squad</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Full PPR, should I drop Cade Otton for Taysom ...</td>\n",
-       "      <td>Signal_Lengthiness83</td>\n",
-       "      <td>I’d hold</td>\n",
-       "      <td>4plates1barbell</td>\n",
+       "      <td>.5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...</td>\n",
+       "      <td>LetTimmySmoke55</td>\n",
+       "      <td>BTJ with Lawrence back</td>\n",
+       "      <td>Fancy_Parsley9429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Olave available, worth grabbing for any of Ake...</td>\n",
-       "      <td>4plates1barbell</td>\n",
-       "      <td>I wouldn’t. No guarantee Olave even plays agai...</td>\n",
-       "      <td>Slashzero77</td>\n",
+       "      <td>Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...</td>\n",
+       "      <td>Gooner-Squad</td>\n",
+       "      <td>Higgins and Sutton</td>\n",
+       "      <td>brimmaudo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Official: [Add/Drop] - Thu Morning 11/28/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>With Pacheco coming back off IR, I have to dro...</td>\n",
-       "      <td>thehippestmanalive</td>\n",
-       "      <td>otton</td>\n",
-       "      <td>Worried_Character_97</td>\n",
+       "      <td>Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...</td>\n",
+       "      <td>Gooner-Squad</td>\n",
+       "      <td>London, Higgins</td>\n",
+       "      <td>Fancy_Parsley9429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -358,7 +358,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>904</th>\n",
+       "      <th>323</th>\n",
        "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
        "      <td>Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...</td>\n",
@@ -367,7 +367,7 @@
        "      <td>Fatnajera</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>905</th>\n",
+       "      <th>324</th>\n",
        "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
        "      <td>Are you all starting taysom hill this week?</td>\n",
@@ -376,7 +376,7 @@
        "      <td>YGuy_The_Jedi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>906</th>\n",
+       "      <th>325</th>\n",
        "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
        "      <td>Are you all starting taysom hill this week?</td>\n",
@@ -385,7 +385,7 @@
        "      <td>Fatnajera</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>907</th>\n",
+       "      <th>326</th>\n",
        "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
        "      <td>PPR - Kareem or Waddle?</td>\n",
@@ -394,7 +394,7 @@
        "      <td>BennyJetss</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>908</th>\n",
+       "      <th>327</th>\n",
        "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
        "      <td>Lions or Texans D?</td>\n",
@@ -404,16 +404,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>909 rows × 6 columns</p>\n",
+       "<p>328 rows × 6 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 3
   },
   {
    "metadata": {},
